welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:-6: error: Missing closing brace `}' assumed here
try {
^arrayCount9:1: error: expected class or object definition
def arrayCount9(nums:Array[Int]): Int = {
^